[gd_scene load_steps=9 format=3 uid="uid://cmywx43uxl7yt"]

[ext_resource type="Script" uid="uid://b1esp3u5s4hac" path="res://editor/play_node_editor.gd" id="1_4plv0"]
[ext_resource type="Theme" uid="uid://1adxjbws8hdd" path="res://editor/editor_theme.tres" id="2_oqrfk"]
[ext_resource type="Theme" uid="uid://bn4flh41jg7rg" path="res://editor/base/context_menu_pad_theme/context_menu_pad_theme.tres" id="3_006xr"]
[ext_resource type="Texture2D" uid="uid://dfmpofi3mdt4" path="res://editor/icon/play.png" id="3_d1awa"]
[ext_resource type="Texture2D" uid="uid://bpu7hqnb563j8" path="res://editor/icon/pause.png" id="4_006xr"]
[ext_resource type="PackedScene" uid="uid://cf4yknb808q7d" path="res://editor/base/state_panel.tscn" id="4_tavto"]
[ext_resource type="Texture2D" uid="uid://dvhacktl4php6" path="res://editor/icon/add_32.png" id="5_oqrfk"]
[ext_resource type="PackedScene" uid="uid://cbaoubcka42sf" path="res://editor/base/context_menu_pad.tscn" id="7_d1awa"]

[node name="PlayNodeEditor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4plv0")

[node name="HSplitContainer2" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_oqrfk")

[node name="EditMargin" type="VBoxContainer" parent="HSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.3
theme = ExtResource("2_oqrfk")

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer2/EditMargin"]
layout_mode = 2
theme = ExtResource("2_oqrfk")

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer2/EditMargin/PanelContainer"]
layout_mode = 2
theme = ExtResource("2_oqrfk")
alignment = 1

[node name="bt_start_begin" type="Button" parent="HSplitContainer2/EditMargin/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("3_006xr")
theme_type_variation = &"FlatButton"
text = "start from begin"
icon = ExtResource("3_d1awa")
icon_alignment = 1
expand_icon = true

[node name="bt_step" type="Button" parent="HSplitContainer2/EditMargin/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("3_006xr")
text = "step play"

[node name="bt_pause" type="Button" parent="HSplitContainer2/EditMargin/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("3_006xr")
text = "pause"
icon = ExtResource("4_006xr")
icon_alignment = 1
expand_icon = true

[node name="StatePanel" parent="HSplitContainer2/EditMargin" instance=ExtResource("4_tavto")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PropMargin" type="VBoxContainer" parent="HSplitContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_oqrfk")

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer2/PropMargin"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer2/PropMargin/MarginContainer"]
layout_mode = 2

[node name="ButtonAddNode" type="Button" parent="HSplitContainer2/PropMargin/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_oqrfk")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("5_oqrfk")
text = "Add Play Node"

[node name="ButtonAddTrans" type="Button" parent="HSplitContainer2/PropMargin/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_oqrfk")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("5_oqrfk")
text = "Add Port Node"

[node name="ButtonAddOther" type="MenuButton" parent="HSplitContainer2/PropMargin/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_oqrfk")
theme_override_font_sizes/font_size = 20
text = "Add Other Node"
icon = ExtResource("5_oqrfk")
flat = false
item_count = 4
popup/item_0/text = "Setting Node"
popup/item_0/id = 0
popup/item_1/text = "Check Count Node"
popup/item_1/id = 1
popup/item_2/text = "Time Begin Node"
popup/item_2/id = 2
popup/item_3/text = "Check Time"
popup/item_3/id = 3

[node name="param_container" type="PanelContainer" parent="HSplitContainer2/PropMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ctt_root_control" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ContextMenuPad" parent="ctt_root_control" instance=ExtResource("7_d1awa")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 153.0
offset_top = 181.0
offset_right = 175.0
offset_bottom = 188.0
